# rust-mysql-client

./: .gitignore  Cargo.toml  database.example.conf
src/: main.rs
src/client/: mod.rs
src/connector/: database.rs  mod.rs  server.rs
src/gui/: component_store.rs  database_browser.rs  editor.rs  header_bar.rs  main_window.rs  mod.rs  result_list.rs  traits.rs
src/gui/traits/: component_store.rs  mod.rs
