[package]
name = "mysql_client"
version = "0.1.0"
authors = ["Robertas <robertasjasmontas@gmail.com>"]

[dependencies.mysql]
mysql = "0.1.*"
default-features = false
features = ["socket"]

# temp gtk linked from patched repository
#[dependencies.gtk]
#gtk = "0.0.4"


[dependencies]
gtk = "0.0.4"
glib = { git = "https://github.com/gtk-rs/glib" }

[dependencies.mysql_connector]
git = "https://github.com/insanebits/rust-mysql-connector.git"
mysql_connector = "*"
