[package]
name = "mysql_client"
version = "0.1.0"
authors = ["Robertas <robertasjasmontas@gmail.com>"]

[dependencies.mysql]
mysql = "0.1.*"
default-features = false
features = ["socket"]

# temp gtk linked from patched repository
#[dependencies.gtk]
#gtk = "0.0.4"


[dependencies]
gtk = "0.0.4"
glib = { git = "https://github.com/gtk-rs/glib" }
config = "~0.1.0"
